                CHANGES IN in VERSION 1.0 (2013-07-16)

    o    Initial version of the package