@@ -1,15 +1,14 @@
 Package: Myrrix
-Version: 1.0
+Version: 1.1
 Title: Interface to Myrrix. Myrrix is a complete, real-time, scalable
         clustering and recommender system, evolved from Apache Mahout.
 Authors@R: c(person("Jan", "Wijffels", role = c("aut", "cre"), email =
-        "jwijffels@bnosac.be"))
+    "jwijffels@bnosac.be"))
 Description: Recommendation engine based on Myrrix. Myrrix is a complete,
     real-time, scalable clustering and recommender system, evolved from Apache
     Mahout. It uses Alternating Least Squares to build a recommendation engine.
-Depends: R (>= 2.6.0), methods, Myrrixjars
-Imports: ffbase, rJava (>= 0.6-3)
-Suggests: testthat
+Depends: R (>= 2.6.0), Myrrixjars
+Imports: methods, rJava (>= 0.6-3)
 SystemRequirements: Java (>= 5.0)
 License: Apache License (== 2.0)
 Author: Jan Wijffels [aut, cre]
@@ -17,8 +16,8 @@ Maintainer: Jan Wijffels <jwijffels@bnosac.be>
 URL: http://www.bnosac.be, myrrix.com
 Collate: 'MyrrixClientConfiguration.R' 'ClientRecommender.R'
         'ServerRecommender.R' 'RecommenderMethods.R'
-        'HyperParameters.R' 'utils.R'
-Packaged: 2013-07-26 19:01:33 UTC; janw
+        'HyperParameters.R' 'utils.R' 'namespace_imports.R'
+Packaged: 2013-12-12 19:57:50 UTC; root
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-07-26 22:31:10
+Date/Publication: 2013-12-12 21:19:28
