@@ -1,18 +1,21 @@
-073184edd76e8ddc3a9f785f3726eae3 *DESCRIPTION
-50fb14ae92e2dcb12821a8b0186d8762 *NAMESPACE
-ed0bd278b953ccff675ad1893984e2c0 *NEWS
+1b10e0a3fe33f9e943898ff7cf8ce39e *DESCRIPTION
+44eb9208c87727455b875c261baac7a4 *NAMESPACE
+d47ebd14f5a58787f9ff9321aac44f2f *NEWS
 0824629e9ee41f6143f8e17ed2079840 *R/ClientRecommender.R
 a9634f796e792aae5def8014142dbd1c *R/HyperParameters.R
 b8ab59de14005ba19ad64b467f0bee62 *R/MyrrixClientConfiguration.R
 d43c1aaea17c2520d40b90f7378615b5 *R/RecommenderMethods.R
 60464be6469ed56933db2c101492bc12 *R/ServerRecommender.R
+df8f6e1af19efda347a475866e12e60c *R/namespace_imports.R
 c96774d22a6cd9a56417eaa22f9bd3ca *R/utils.R
-4cf0a44ee4d542f56b39ff2b3779151c *inst/doc/logo_bnosac.png
+1625c381c08be636c04f00cb278416af *build/vignette.rds
+ee6d845667700d041d0652e0ae8a017f *inst/doc/packageShowCase.R
 00487a5c4d2d3d0bd1f2da657550de64 *inst/doc/packageShowCase.Rnw
-7f3c1c98196e8cb91403428e83d4cc17 *inst/doc/packageShowCase.pdf
+0accbc684175ed4d3f42ceacea281de2 *inst/doc/packageShowCase.pdf
 8b81f70a7278ed40654d453c06f99262 *man/ClientRecommender-class.Rd
 8fcf882895492a92879bcd4d1412634a *man/MyrrixClientConfiguration-class.Rd
 37bf92799e817204c14c6a3e094d95ee *man/MyrrixClientConfiguration-methods.Rd
 99dd8fb0c1f4843fa4bf68dc48e6c962 *man/RecommenderMethods-methods.Rd
 f25818ed20a37fd1206499537cad7efc *man/ServerRecommender-class.Rd
-207e31d05e1f4818ef4c3f9fdae557cf *tests/test-all.R
+4cf0a44ee4d542f56b39ff2b3779151c *vignettes/logo_bnosac.png
+00487a5c4d2d3d0bd1f2da657550de64 *vignettes/packageShowCase.Rnw
