@@ -1,0 +1,10 @@
+### R code from vignette source 'packageShowCase.Rnw'
+
+###################################################
+### code chunk number 1: preliminaries
+###################################################
+options(prompt = "R> ", continue = "+   ")
+options(prompt = " ", continue = "   ")
+set.seed(123456789)
+
+
