@@ -1,2 +1,0 @@
-library(testthat)
-test_package("Myrrix")
