@@ -1,0 +1,55 @@
+%\VignetteIndexEntry{R interface to the Myrrix recommendation engine}
+
+\documentclass[nojss]{jss}
+\title{R interface to Myrrix \\ Large-scale distributed recommendations}
+\author{Jan Wijffels}
+\Plainauthor{Jan Wijffels}
+\Plaintitle{R interface to Myrrix - Large-scale distributed recommendations}
+\Abstract{
+This package allows R users to communicate and build recommendation engines using Myrrix (\url{http://myrrix.com}).\\
+Myrrix combines the popular real-time Recommender API from Taste/Mahout, and integrates it completely with the distributed implementations begun in Mahout. It is "Taste 3", a continuing evolution of these recommender systems, from the primary author of these components, redesigned into a complete big-data-ready system.\\
+For more information on setting up large scale recommendation systems, contact the author.
+}
+\Keywords{Myrrix, recommendation engine}
+\Plainkeywords{Myrrix, recommendation engine}
+
+\Address{
+  BNOSAC\\
+  Belgium Network of Open Source Analytical Consultants\\
+  Limnanderstraat 26, 1070 Anderlecht, Belgium\\
+  E-mail: \email{jwijffels@bnosac.be}\\
+  URL: \url{http://www.bnosac.be}\\
+  Tel: +32 486 611708
+}
+
+\begin{document}
+\SweaveOpts{concordance=TRUE}
+
+<<preliminaries, echo=FALSE, results=hide>>=
+options(prompt = "R> ", continue = "+   ")
+options(prompt = " ", continue = "   ")
+set.seed(123456789)
+@
+
+\subsection{GitHub - package repository}
+The development of this package is done by BNOSAC and is available on github at \url{https://github.com/jwijffels/Myrrix-R-interface}
+
+\subsection{BNOSAC}
+BNOSAC, is a Belgium consultancy network specialized in open source analytical intelligence. We gather a group of dedicated open source software engineers with a focus on data mining, business intelligence, statistical engineering and advanced artificial intelligence.
+\begin{center}
+\includegraphics[width=5cm]{logo_bnosac.png}
+\end{center}
+We are experts in using analytical open source software and provide expertise, consultancy and training for the use of well-established open source tools like R, Python, Hadoop, Pentaho, PostgreSQL, OpenBugs, PostGIS and Mapserver in your organisation.
+Our main areas of focus are:
+\begin{enumerate}
+\item{Standard data mining}
+\item{Spatial data mining}
+\item{Business intelligence}
+\item{Web \& Text mining}
+\item{Biostatistics \& statistical consulting}
+\item{Training and support}
+\end{enumerate}
+We supply you with the knowledge, the technology and the practical skills to efficiently boost your business through analytical problem-solving. Our open source expertise allows us to combine a low price for high quality while integrating the latest no-nonsense statistical developments in your business setting. \\
+We consider ourselves as helpers. We aid in setting up analytical platforms, statistical servers, data marts, help you integrate these applications in your operational systems and let you understand and apply the analytical techniques that can leverage your strategic business goals.
+
+\end{document}
